# leadforge

./: .agent-plan.md  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  llms.txt  package-lock.json  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: dataset_breakage_report.yml  realism_feedback.yml
.github/workflows/: ci.yml  deploy-docs.yml  pr-agent-context-refresh-dispatcher.yml  pr-agent-context-refresh.yml  pr-agent-context.yml
docs/: leadforge_architecture_spec.md  leadforge_design_doc.md  leadforge_implementation_plan.md
docs/brainstorming_process/: chatgpt_leadforge_research_and_brainstorming.md  claude_leadforge_research_and_brainstorming.md  gemini_leadforge_research_and_brainstorming.md  leadforge_research_and_brainstorming_summary.md
docs/ltv/: design.md  roadmap.md
docs/release/: break_me_guide.md  channel_signal_audit.json  channel_signal_audit.md  feature_dictionary.md  generation_method.md  llm_critique_design.md  llm_critique_prompt.md  post_v1_roadmap.md  preview_pages_design.md  v1_acceptance_gates.md  v1_acceptance_gates_bands.yaml  v1_current_state_audit.md  v1_release_design.md  v1_release_notes.md  v1_release_roadmap.md  v2_decision_log.md
docs/v4/: dataset_contract.md  design.md  engine_changes_spec.md  implementation_plan.md  lead_scoring_v4_requirements.md  planning_pr_review.md  validation_spec.md
lead_scoring_intro/: BACKGROUND_v6.md  BACKGROUND_v7.md  RELEASE_v6.md  RELEASE_v7.md  lead_scoring_intro_v6.csv  lead_scoring_intro_v6_instructor.csv  lead_scoring_intro_v7.csv  lead_scoring_intro_v7_instructor.csv  validation_v7_report.json
leadforge/: __init__.py  version.py
leadforge/api/: __init__.py  bundle.py  generator.py  recipes.py
leadforge/cli/: main.py
leadforge/core/: enums.py  exceptions.py  hashing.py  ids.py  models.py  rng.py  sentinels.py  serialization.py
leadforge/exposure/: filters.py  metadata.py  modes.py  redaction.py
leadforge/mechanisms/: base.py  categorical.py  counts.py  hazards.py  influence.py  measurement.py  policies.py  scores.py  static.py  transitions.py
leadforge/narrative/: dataset_card.py  spec.py
leadforge/pipelines/: __init__.py  build_midproject.py  build_v5.py  build_v6.py  build_v7.py  common.py  ml.py
leadforge/recipes/: registry.py
leadforge/render/: bundle.py  distortions.py  manifests.py  relational.py  relational_io.py  relational_snapshot_safe.py  snapshots.py  tasks.py
leadforge/schema/: dictionaries.py  entities.py  features.py  relationships.py  tables.py  tasks.py
leadforge/schemes/: __init__.py  base.py
leadforge/simulation/: engine.py  population.py  state.py
leadforge/structure/: graph.py  motifs.py  node_types.py  rewiring.py  sampler.py
leadforge/validation/: bundle_checks.py  difficulty.py  drift.py  invariants.py  lead_scoring.py  leakage_probes.py  llm_critique.py  realism.py  relational_leakage.py  release_quality.py  reporting.py
release/: HF_DATASET_CARD.md  README.md  claims_register.json  claims_register.md  claims_register_source.yaml  metrics.json
release/_preview_committed/: huggingface_instructor.html  huggingface_public.html  kaggle.html
release/docs/: README.md  channel_signal_audit.md  feature_dictionary.md  relational_table_schemas.csv  v2_decision_log.md
release/huggingface/: README.md
release/huggingface-instructor/: README.md
release/kaggle/: README.md  dataset-metadata.json
release/notebooks/: 01_baseline_lead_scoring.ipynb  02_relational_feature_engineering.ipynb  03_leakage_and_time_windows.ipynb  04_lift_calibration_value_ranking.ipynb  _notebook_utils.py  _release_targets.json
release/validation/: llm_critique_raw_20260508T204359.124834Z.json  llm_critique_summary.md  validation_report.json  validation_report.md
scripts/: _build_release_notebook_01.py  _build_release_notebook_02.py  _preview_common.py  _release_common.py  _release_notebook_common.py  audit_channel_signal.py  build_claims_register.py  build_midproject_lead_scoring.py  build_public_release.py  build_release_metrics.py  build_release_notebook_01.py  build_release_notebook_02.py  build_release_notebook_03.py  build_release_notebook_04.py  build_shmuggingface_site.py  build_v4_snapshot.py  build_v5_snapshot.py  build_v6_snapshot.py  build_v7_snapshot.py  generate_cover_image.py  lint_platform_metadata.py  package_hf_release.py  package_kaggle_release.py  preview_hf_page.py  preview_kaggle_page.py  probe_relational_leakage.py  publish_hf.py  publish_kaggle.py  quick_baseline_eval_midproject.py  quick_baseline_eval_v5.py  quick_baseline_eval_v6.py  quick_baseline_eval_v7.py  run_llm_critique.py  spike_category_signal.py  sync_release_docs.py  validate_lead_scoring_dataset.py  validate_midproject_lead_scoring.py  validate_release_candidate.py  validate_v4_dataset.py  validate_v5_dataset.py  (+4 more)
tests/: conftest.py  test_cli.py  test_difficulty_modulation.py  test_pr_2_2_integration.py  test_primary_task_threading.py  test_snapshot_day_threading.py
tests/api/: test_generator.py  test_recipes.py  test_resolve_config_lifecycle.py
tests/core/: test_config_lifecycle_fields.py  test_enums.py  test_exceptions.py  test_hashing.py  test_rng.py
tests/exposure/: test_exposure.py  test_redaction.py
tests/integration/: test_release_quality_round_trip.py  test_snapshot_safe_bundle.py
tests/mechanisms/: test_mechanisms.py
tests/narrative/: test_dataset_card.py  test_spec.py
tests/recipes/: test_b2b_saas_ltv_v1.py  test_registry.py
tests/release/: test_relational_table_schemas.py
tests/render/: test_bundle_envelope.py  test_bundle_schema_v3_contract.py  test_bundle_schema_v4_contract.py  test_bundle_schema_v5_contract.py  test_bundle_schema_v6_contract.py  test_distortions.py  test_manifest_scheme_agnostic.py  test_relational_snapshot_safe.py  test_render.py  test_shared_task_writer.py  test_snapshot_windowed.py  test_windowed_bundle_trap.py  test_write_relational_tables.py
tests/schema/: test_entities.py  test_features.py  test_ids.py  test_relationships.py  (+2 more)
website/: docusaurus.config.ts  package-lock.json  sidebars.ts
(+167 files in other folders)
