[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadforge"
version = "0.1.0"
description = "Opinionated framework for generating synthetic CRM and GTM datasets from simulated commercial worlds"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "leadforge contributors" }]
keywords = ["synthetic data", "CRM", "lead scoring", "machine learning", "simulation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer[all]>=0.12",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "networkx>=3.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0",
]

[project.scripts]
leadforge = "leadforge.cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["leadforge*"]

[tool.setuptools.package-data]
"leadforge" = ["**/*.yaml", "**/*.yml"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S108"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = ["pandas", "pandas.*", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
